# ffmpeg-ci

./: .gitignore  .gitmodules  CLAUDE.md  CODEBUDDY.md  Makefile  README.md  android_ffmpeg.sh  build_dav1d.sh  build_davs2.sh  build_ffmpeg.sh  build_fontconfig.sh  build_freetype.sh  build_lsmash.sh  build_nasm.sh  build_openh264.sh  build_openssl.sh  build_srt.sh  build_uavs3d.sh  build_vmaf.sh  build_vvdec.sh  build_x264.sh  build_x265.sh  build_zimg.sh  cibuild.sh  cmake-build-control.md  emsdk_ffmpeg.sh  env.sh  ffmpeg-build-log.md  ffmpeg-build-refactor-plan.md  hm_ffmpeg.sh  setup_meson.sh  test_avs.sh  wasi_ffmpeg.sh  win-run-fate.sh
.claude/: settings.json
.codebuddy/commands/: ffmpeg_build_test.md
.codebuddy/doc/: ai-agent-rules.md  optimization-project-rules.md  vvc-architecture.md  vvc-opt.md  vvc-optimization-guide.md  vvc-perf-analysis-android.md  vvc-perf-analysis-black2.md  vvc-perf-analysis-pi2.md  vvc-sao-zerocopy-postmortem.md  vvc-zerocopy-experiment.md
android/: settings.gradle
android/app/: build.gradle
android/app/cpp/: ANDROID_PATCHES.md  CMakeLists.txt  FFMPEG_UPSTREAM_VERSION  cmdutils.c  ffmpeg.c  ffmpeg.h  ffmpeg_dec.c  ffmpeg_demux.c  ffmpeg_filter.c  ffmpeg_global.h  ffmpeg_hw.c  ffmpeg_misc.c  ffmpeg_mux_init.c  ffmpeg_opt.c  ffmpeg_resman.c  native-lib.cpp  opt_common.c
android/app/cpp/textformat/: tf_json.c
android/app/src/androidTest/java/com/example/ffmpegplay/: ExampleInstrumentedTest.java
android/app/src/debug/: AndroidManifest.xml
android/app/src/debug/java/com/example/ffmpegplay/: DebugFFmpegReceiver.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/ffmpegplay/: FFmpeg.java  MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/ffmpegplay/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
emsdk-test/: PACKAGE-README.md  README.md  analyze-cpuprofile.py  benchmark.sh  index.html  node-decode.js  package.sh  profile.sh  protect-wasm.js  run-decode.js  run-fate.sh  run-node.sh  serve.sh  test.js
patch/: uavs3d.patch
prebuilt_android/aarch64/pkgconfig/: shaderc.pc
prebuilt_android/armeabi-v7a/pkgconfig/: shaderc.pc
prebuilt_android/lib/pkgconfig/: shaderc.pc
vcpkg/: .gitignore  README.md  build.sh  clean.sh  incremental_make.ps1  rebuild_ffmpeg.ps1
vcpkg/ffmpeg/: build.sh.in  portfile.cmake  vcpkg.json
win/: .gitignore  README.md  build.bat  build.sh
